[package]
name = "lau-observation-control"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-observation-control"
description = "Observation ⊣ Control adjunction — biduality closure of the PLATO agent loop"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
